force-app/main/default/objects/Account/fields/Terms_Of_Service_Acceptance_IP__c.field-meta.xml
<CustomField>
    <fullName>Terms_Of_Service_Acceptance_IP__c</fullName>
    <label>Terms Of Service Acceptance IP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>