force-app/main/default/objects/Account/fields/Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions__c</fullName>
    <label>Total Commissions</label>
    <summarizedField>Affiliate_Offer__c.Total_Commissions__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>