force-app/main/default/objects/Account/fields/Total_CPA__c.field-meta.xml
<CustomField>
    <fullName>Total_CPA__c</fullName>
    <inlineHelpText>CPA from Campaign</inlineHelpText>
    <label>Total CPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>