force-app/main/default/objects/Account/fields/Van_Type__c.field-meta.xml
<CustomField>
    <fullName>Van_Type__c</fullName>
    <label>Van Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>