force-app/main/default/objects/Account/fields/Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wholesaler</label>
    <type>Checkbox</type>
</CustomField>